--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="shared.css">
-    <link rel="stylesheet" type="text/css" href="packages.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
