--- a/dls/customers/index.html
+++ b/dls/customers/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost Customers</title>
     <link rel="shortcut icon" href="../favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="backdrop"></div>    
+    <div class="backdrop"></div>
     <header class="main-header">
         <div>
             <button class="toggle-button">
@@ -34,24 +34,24 @@
                     <a href="index.html">Customers</a>
                 </li>
                 <li class="main-nav__item main-nav__item--cta">
-                    <a href="../start-hosting/index.html">Start Hosting</a>
+                    <a href="start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
     </header>
     <nav class="mobile-nav">
-            <ul class="mobile-nav__items">
-                <li class="mobile-nav__item">
-                    <a href="../packages/index.html">Packages</a>
-                </li>
-                <li class="mobile-nav__item">
-                    <a href="index.html">Customers</a>
-                </li>
-                <li class="mobile-nav__item mobile-nav__item--cta">
-                    <a href="../start-hosting/index.html">Start Hosting</a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="mobile-nav__items">
+            <li class="mobile-nav__item">
+                <a href="../packages/index.html">Packages</a>
+            </li>
+            <li class="mobile-nav__item">
+                <a href="index.html">Customers</a>
+            </li>
+            <li class="mobile-nav__item mobile-nav__item--cta">
+                <a href="../start-hosting/index.html">Start Hosting</a>
+            </li>
+        </ul>
+    </nav>
     <main>
         <div>
             <div class="testimonial" id="customer-1">
@@ -63,8 +63,7 @@
                     <h2 class="testimonial__subtitle">Founder of
                         <a href="tech-analysis.com">tech-analysis.com</a>
                     </h2>
-                    <p class="testimonial__text">uHost helped me realize my project with a highly constrained budget in
-                        like no time.</p>
+                    <p class="testimonial__text">uHost helped me realize my project with a highly constrained budget in like no time.</p>
                 </div>
             </div>
             <div class="testimonial" id="customer-2">
@@ -73,8 +72,7 @@
                     <h1 class="testimonial__name">John Mellow</h1>
                     <h2 class="testimonial__subtitle">Hosts his private videos on uHost.
                     </h2>
-                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and
-                        file storage solution. I found
+                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found
                         it in uHost!
                     </p>
                 </div>
