--- a/dls/packages/index.html
+++ b/dls/packages/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <title>uHost Packages</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>uHost</title>
     <link rel="shortcut icon" href="../favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../shared.css">
@@ -41,26 +41,25 @@
         </nav>
     </header>
     <nav class="mobile-nav">
-            <ul class="mobile-nav__items">
-                <li class="mobile-nav__item">
-                    <a href="index.html">Packages</a>
-                </li>
-                <li class="mobile-nav__item">
-                    <a href="../customers/index.html">Customers</a>
-                </li>
-                <li class="mobile-nav__item mobile-nav__item--cta">
-                    <a href="../start-hosting/index.html">Start Hosting</a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="mobile-nav__items">
+            <li class="mobile-nav__item">
+                <a href="index.html">Packages</a>
+            </li>
+            <li class="mobile-nav__item">
+                <a href="../customers/index.html">Customers</a>
+            </li>
+            <li class="mobile-nav__item mobile-nav__item--cta">
+                <a href="../start-hosting/index.html">Start Hosting</a>
+            </li>
+        </ul>
+    </nav>
     <main>
         <section class="package" id="plus">
             <a href="#">
                 <h1 class="package__title">Our PLUS Plan</h1>
                 <h2 class="package__badge">RECOMMENDED</h2>
                 <h2 class="package__subtitle">The most popular choice of our customers.</h2>
-                <p class="package__info">Benefit from increased storage and faster support to ensure that your
-                    mission-critical data and applications
+                <p class="package__info">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
                     are always available!</p>
             </a>
         </section>
@@ -76,8 +75,7 @@
             <a href="#">
                 <h1 class="package__title">Our PREMIUM Plan</h1>
                 <h2 class="package__subtitle">All your enterprise needs. Instant support, guaranteed uptime. </h2>
-                <p class="package__info">The best solution for small to large enterprises. Because hosting shouldn't be
-                    in the way!</p>
+                <p class="package__info">The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
             </a>
         </section>
     </main>
