grid transition animation added

--- a/start-hosting/index.html
+++ b/start-hosting/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost Signup</title>
     <link rel="shortcut icon" href="../favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="start-hosting.css">
 </head>
@@ -68,10 +67,12 @@
             <input type="email" id="email">
             <label for="password">Password</label>
             <input type="password" id="password">
-            <input type="checkbox" id="agree-terms">
-            <label for="agree-terms">Agree to
-                <a href="#">Terms &amp; Conditions</a>
-            </label>
+            <div class="signup-form__checkbox">
+                <input type="checkbox" id="agree-terms">
+                <label for="agree-terms">Agree to
+                    <a href="#">Terms &amp; Conditions</a>
+                </label>
+            </div>
             <button type="submit" class="button">Sign Up</button>
         </form>
     </main>
